# databricks-sql-python

./: .gitignore  check.py  setup_script.py  test_split.py
benchmarking/: conftest.py  test_benchmark.py
databricks_sql_connector/: pyproject.toml
pysql-connector/: pyproject.toml
pysql-connector/databricks/sqlalchemy/: __init__.py
sqlalchemy-dialect/: pyproject.toml
sqlalchemy-dialect/databricks_sqlalchemy_dialect/: README.sqlalchemy.md  __init__.py  _parse.py  base.py  setup.cfg
sqlalchemy-dialect/databricks_sqlalchemy_dialect/test/: _extra.py  _future.py  _regression.py  _unsupported.py  conftest.py  test_suite.py
sqlalchemy-dialect/databricks_sqlalchemy_dialect/test_local/: test_parsing.py  test_types.py
sqlalchemy-dialect/databricks_sqlalchemy_dialect/test_local/e2e/: test_basic.py
sqlalchemy-plugin/: pyproject.toml
sqlalchemy-plugin/src/sqlalchemy_db/: README.sqlalchemy.md  README.tests.md  __init__.py  _parse.py  base.py  setup.cfg
sqlalchemy-plugin/src/sqlalchemy_db/test/: _extra.py  _future.py  _regression.py  _unsupported.py  conftest.py  test_suite.py
sqlalchemy-plugin/src/sqlalchemy_db/test_local/: test_parsing.py  test_types.py
sqlalchemy-plugin/src/sqlalchemy_db/test_local/e2e/: test_basic.py
